# av-agent-langraph-orchestration

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README_NFCU_ServiceNow_Agent_PS.md  langgraph.json  pyproject.toml
docs/: adf-agent-test-questions.md
docs/architecture/: ADF_AGENT_REQUIREMENTS_TRACEABILITY.md  ADF_HIERARCHY_FIX.md  ORCHESTRATION_FLOW.md
docs/intents/: convert_intents.py  servicenow_intent_test_cases_v4.xlsx
docs/research/: LONG_CONTEXT_STRATEGIES.md  long-context-strategy-slides.html
docs/superpowers/specs/: 2026-07-12-adf-subagent-design.md
docs/todo/: PROD_DEPLOYMENT_TODO.md  TODO.md
infra/: .env.deploy  README.md  deploy.sh  main.bicep  main.bicepparam  test-deployment.sh
src/v1/: __init__.py
src/v1/api/: main.py
src/v1/api/routes/: feedback.py  starter_prompts.py
src/v1/core/: __init__.py  agent.py  config.py
src/v1/core/middlewares/: __init__.py  citations.py  safety.py  servicenow_access.py  sliding_window.py  subagent_access.py
src/v1/core/prompts/: __init__.py  adf.py  orchestrator.py  servicenow.py
src/v1/core/skills/: __init__.py
src/v1/core/skills/message-formatting/: SKILL.md
src/v1/core/skills/sttm/: SKILL.md
src/v1/core/subagents/: __init__.py
src/v1/core/subagents/adf/: __init__.py  subagent.py
src/v1/core/subagents/servicenow/: __init__.py  (+1 more)
src/v1/core/tools/: __init__.py
src/v1/utils/: auth.py  azure_credentials.py  azure_key_vault.py  checkpointer.py  graph_groups.py  group_routing.py  helper.py  langsmith.py  logging.py  retry.py
src/v1/utils/clients/: servicenow.py
(+24 files in other folders)
